# otmqtt

./: .gitignore  LICENSE.txt  OpenTherm_v22.ods  README.md  pyproject.toml  requirements.txt
src/otmqtt/: __main__.py  hass_discovery.py  opentherm.py  ot_registers.py  otmqtt.py
